2006-08-28  Philip Van Hoof <pvanhoof@gnome.org>

	*  Added a unit test for TnyFolderStoreQuery
	
2006-08-27  Philip Van Hoof <pvanhoof@gnome.org>

	* Bugfix when switching offline and online and again getting a
	message that had been viewed already

	* Rechecked the dirty camel_object_unref hacks in tny-msg.c

2006-08-26 Dirk-Jan C. Binnema <djcb@djcbsoftware.nl>

	* Made tinymail compile with -Wall -Werror
	* Fix some AMD64 problems
	* Fix test program (gtk_init)
	* Fix internet address parsing (camel-common)

2006-08-25  Philip Van Hoof <pvanhoof@gnome.org>

	* Further upgraded to the new get-folders API
	* Updated the API documentation

2006-08-25  Philip Van Hoof <pvanhoof@gnome.org>

	* Added the tny_msg_view_iface_clear API

	* This was a major API change

2006-08-25  Philip Van Hoof <pvanhoof@gnome.org>

	* libtinymailui-gtk/tny-account-tree-model.c: Reimplemented using the
	new TnyFolderStoreIface API

2006-08-25  Philip Van Hoof <pvanhoof@gnome.org>

	* Speedup the new get-folders API by caching the CamelFolderStore

2006-08-25  Philip Van Hoof <pvanhoof@gnome.org>

	* Lots of files: Removed the tny_folder_iface_uncache API and replaced 
	it with a detection mechanism that automates this. It will now uncache 
	the folder once there's no more header instances of that folder being 
	referenced.

	This indeed means that the reference counting of the headers must be 
	carefully monitored and absolutely correct. Some of the changes of this
	commit included fixes for this. For example the reparenting of the 
	header instance didn't happen in the TnyMsgViewIface implementations in
	ui-gtk and ui-mozembed.

	* This was a major API change
	
2006-08-24  Philip Van Hoof <pvanhoof@gnome.org>

	* libtinymail-camel/tny-camel-common.c, 
	libtinymail-camel/tny-folder.c, libtinymail-camel/tny-store-account.c,
	libtinymail-camel/tny-camel-common-priv.h, libtinymail-camel/
	tny-folder-priv.h, tests/functional/folder-lister.c, libtinymail/